# risk-analytics-toolkit

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: index.md  mkdocs.yml
examples/: run_example.py  sample_claims.csv
src/risk_analytics_toolkit/: __main__.py  api.py  estimation.py  metrics.py  simulations.py  utils.py  visualization.py
src/risk_analytics_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/risk_analytics_toolkit/data/: ingestion.py
tests/: test_api.py  test_estimation.py  test_metrics.py  test_simulations.py
